# data-viz

./: .buildinfo  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  ENHANCEMENT_FINAL_STATUS.md  MANIFEST.in  PARAMETER_EXTENSION_TEMPLATE.md  README.md  SECURITY.md  SHELL_INTEGRATION_CONFIG.md  SHELL_INTEGRATION_GUIDE.md  data-viz.code-workspace  dataviz.bivariate.advanced.html  dataviz.bivariate.categorical.html  dataviz.bivariate.charts.html  dataviz.bivariate.correlation.html  dataviz.bivariate.html  dataviz.bivariate.joint.html  dataviz.bivariate.line.html  dataviz.bivariate.scatter.html  dataviz.bivariate.stats.html  dataviz.bivariate.trends.html  dataviz.classification.charts.html  dataviz.classification.confusion_matrix.html  dataviz.classification.html  dataviz.classification.pr_curve.html  dataviz.classification.roc.html  dataviz.clustering.charts.html  dataviz.clustering.dendrogram.html  dataviz.clustering.elbow.html  dataviz.clustering.elbow_enhanced.html  dataviz.clustering.html  dataviz.clustering.scatter_clusters.html  dataviz.core.html  dataviz.eda.charts.html  dataviz.eda.class_dist.html  dataviz.eda.distribution.html  dataviz.eda.html  (+68 more)
.doctrees/: dataviz.bivariate.advanced.doctree  dataviz.bivariate.categorical.doctree  dataviz.bivariate.charts.doctree  dataviz.bivariate.correlation.doctree  dataviz.bivariate.doctree  dataviz.bivariate.joint.doctree  dataviz.bivariate.line.doctree  dataviz.bivariate.scatter.doctree  dataviz.bivariate.stats.doctree  dataviz.bivariate.trends.doctree  dataviz.classification.charts.doctree  dataviz.classification.confusion_matrix.doctree  dataviz.classification.doctree  dataviz.classification.pr_curve.doctree  dataviz.classification.roc.doctree  dataviz.clustering.charts.doctree  dataviz.clustering.dendrogram.doctree  dataviz.clustering.doctree  dataviz.clustering.elbow.doctree  dataviz.clustering.elbow_enhanced.doctree  dataviz.clustering.scatter_clusters.doctree  dataviz.core.doctree  dataviz.eda.charts.doctree  dataviz.eda.class_dist.doctree  dataviz.eda.distribution.doctree  dataviz.eda.doctree  dataviz.eda.missing_data.doctree  dataviz.multivariate.charts.doctree  dataviz.multivariate.doctree  dataviz.multivariate.heatmap.doctree  dataviz.multivariate.pairplot.doctree  dataviz.multivariate.parallel.doctree  dataviz.regression.charts.doctree  dataviz.regression.doctree  dataviz.regression.learning.doctree  dataviz.regression.prediction.doctree  dataviz.regression.residual.doctree  dataviz.spc.attribute.doctree  dataviz.spc.capability.doctree  dataviz.spc.charts.doctree  (+46 more)
.doctrees/source/: index.doctree
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: docs.yml  release.yml  tests.yml
_modules/: index.html
_modules/dataviz/: core.html
_sources/: dataviz.bivariate.advanced.rst.txt  dataviz.bivariate.categorical.rst.txt  dataviz.bivariate.charts.rst.txt  dataviz.bivariate.correlation.rst.txt  dataviz.bivariate.joint.rst.txt  dataviz.bivariate.line.rst.txt  dataviz.bivariate.rst.txt  dataviz.bivariate.stats.rst.txt  dataviz.bivariate.trends.rst.txt  dataviz.classification.charts.rst.txt  dataviz.classification.confusion_matrix.rst.txt  dataviz.classification.pr_curve.rst.txt  dataviz.classification.roc.rst.txt  dataviz.clustering.charts.rst.txt  dataviz.clustering.elbow.rst.txt  dataviz.clustering.elbow_enhanced.rst.txt  dataviz.clustering.rst.txt  dataviz.clustering.scatter_clusters.rst.txt  dataviz.core.rst.txt  dataviz.eda.class_dist.rst.txt  dataviz.eda.missing_data.rst.txt  dataviz.eda.rst.txt  dataviz.multivariate.charts.rst.txt  dataviz.multivariate.heatmap.rst.txt  dataviz.multivariate.pairplot.rst.txt  dataviz.multivariate.parallel.rst.txt  dataviz.multivariate.rst.txt  dataviz.regression.charts.rst.txt  dataviz.regression.prediction.rst.txt  dataviz.regression.residual.rst.txt  dataviz.regression.rst.txt  dataviz.rst.txt  dataviz.spc.attribute.rst.txt  dataviz.spc.capability.rst.txt  dataviz.spc.control.rst.txt  dataviz.spc.dashboard.rst.txt  dataviz.spc.diagnostics.rst.txt  dataviz.spc.multivariate.rst.txt  dataviz.spc.rst.txt  dataviz.spc.rules.rst.txt  (+32 more)
dataviz/: __init__.py  core.py  types.py
dataviz/bivariate/: __init__.py  advanced.py  categorical.py  charts.py  correlation.py  joint.py  line.py  scatter.py  stats.py  trends.py
dataviz/classification/: __init__.py  calibration.py  calibration_extra.py  charts.py  confusion_extended.py  confusion_matrix.py  decision_boundary.py  errors.py  fairness.py  gain_lift.py  model_comparison.py  multiclass.py  multiclass_extra.py  multilabel.py  pr_curve.py  report.py  roc.py  score_dist.py  threshold.py  threshold_extra.py  training.py
dataviz/clustering/: __init__.py  charts.py  dendrogram.py  elbow_enhanced.py  scatter_clusters.py
dataviz/eda/: __init__.py  charts.py  class_dist.py  distribution.py  missing_data.py
dataviz/multivariate/: __init__.py  charts.py  heatmap.py  pairplot.py  parallel.py
dataviz/regression/: __init__.py  autocorrelation.py  bayesian.py  calibration_regression.py  charts.py  coefficients.py  comparison.py  cv_extended.py  diagnostics_panel.py  domain.py  effects.py  errors_loss.py  forecast.py  glm.py  gof.py  helpers.py  (+20 more)
docs/: README.md  conf.py  config.py  dataviz.classification.rst  dataviz.rst  generate_api.py  index.rst  univariate.md
examples/: univariate_gallery.py
source/: index.html
tests/: __init__.py  test_core.py  test_packaging.py  test_scatter_alignment.py  test_spc_core.py  test_univariate_core.py  test_univariate_smoke.py
website/: README.md  _generate_function_docs.mjs  api.html  changelog.html  examples.html  index.html  installation.html  module-bivariate.html  module-classification.html  module-clustering.html  module-dashboards.html  module-datasets.html  module-eda.html  module-forecasting.html  module-geospatial.html  module-io.html  module-multivariate.html  module-network.html  module-regression.html  module-spc.html  module-themes.html  module-time-series.html  module-univariate.html  module-utils.html  module-xai.html  user-guide.html
(+1559 files in other folders)
