[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataviz"
version = "0.1.0"
description = "A comprehensive data visualization package"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "PhD Aned Esquerra-Arguelles", email = "aned.ezquerra@gmail.com"}
]
keywords = ["visualization", "data", "charts", "plotting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "plotly>=5.0.0",
    "scipy>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
]
docs = [
    "sphinx>=8.0,<10.0",
    "sphinx-rtd-theme>=3.0,<4.0",
    "sphinx-copybutton>=0.5,<1.0",
    "sphinx-design>=0.6,<1.0",
]

[project.urls]
Homepage = "https://github.com/anedezquerra/data-viz"
Documentation = "https://anedezquerra.github.io/data-viz/"
Repository = "https://github.com/anedezquerra/data-viz.git"
"Bug Tracker" = "https://github.com/anedezquerra/data-viz/issues"

[tool.setuptools.packages.find]
include = ["dataviz*"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=dataviz --cov-report=html --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
