[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataviz"
description = "A comprehensive Python data visualization package with static and interactive APIs"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Aned Esquerra-Arguelles", email = "aned.ezquerra@gmail.com"}
]
keywords = [
    "visualization",
    "data",
    "charts",
    "plotting",
    "matplotlib",
    "plotly",
    "seaborn",
    "statistical-process-control",
    "exploratory-data-analysis",
    "xai",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]
dynamic = ["version"]

dependencies = [
    # Matplotlib 3.11 removed the `fill` kwarg from `Series.plot.kde`. Keep
    # the upper bound at 3.11 until the affected helpers are migrated.
    "matplotlib>=3.9.4,<3.11",
    "seaborn>=0.13.2,<1",
    "numpy>=2.0.2,<3",
    "pandas>=2.3.3,<3",
    # Plotly 6 renamed the box-trace `points` property; pin until callsites
    # are updated to use `boxpoints` consistently.
    "plotly>=6.8.0,<7",
    "scipy>=1.13.1,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
    "build>=1.0",
    "twine>=4.0",
]
docs = [
    "sphinx>=8.0,<10.0",
    "sphinx-rtd-theme>=3.0,<4.0",
    "sphinx-copybutton>=0.5,<1.0",
    "sphinx-design>=0.6,<1.0",
]
export = [
    "kaleido>=0.2",
]

[project.urls]
Homepage = "https://github.com/anedezquerra/data-viz"
Documentation = "https://anedezquerra.github.io/data-viz/"
Repository = "https://github.com/anedezquerra/data-viz.git"
"Bug Tracker" = "https://github.com/anedezquerra/data-viz/issues"
Changelog = "https://github.com/anedezquerra/data-viz/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["dataviz*"]

[tool.setuptools.dynamic]
version = {attr = "dataviz.__version__"}

[tool.setuptools.package-data]
dataviz = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["dataviz"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
